# chicago-crime-analysis

./: .gitignore  README.md  main.py  pyproject.toml
data/raw/: .gitignore
notebooks/: 01_data_understanding.ipynb  02_data_cleaning.ipynb  03_exploratory_data_analysis.ipynb  04_data_modeling.ipynb  05_advanced_modeling.ipynb  06_advanced_modeling_v3.ipynb
notebooks/regression/: 01_data_understanding.ipynb  02_data_cleaning.ipynb  03_data_exploration_analysis.ipynb  04_data_modeling.ipynb
notebooks/version2/: 01_data_understanding.ipynb  02_data_cleaning.ipynb  03_exploratory_data_analysis.ipynb  04_data_modeling.ipynb
src/: __init__.py  eda.py  load_data.py  modeling.py  preprocess.py
