[project]
name = "chicago-crime-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "lightgbm>=4.0.0",
    "category-encoders>=2.6.0",
    "imbalanced-learn>=0.12.0",
]
